<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
      android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:text="My Tasks"

        />





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"

    />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_margin="1dp"
            android:onClick="addTask"
            android:text="Add Task" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="allTask"
            android:layout_margin="1dp"
            android:text="All Task" />
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setting"
            android:layout_margin="1dp"
            android:text="settings" />

    </LinearLayout>




</LinearLayout>