<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="20dp"
    tools:context=".TaskDetail">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"

        android:textColor="@color/cyan"
        android:layout_weight="1"
        android:text="" />

    <TextView
        android:id="@+id/body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text=""/>
    <TextView
        android:id="@+id/state1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"

        android:textColor="@color/cyan"
        android:layout_weight="1"
        android:text="" />
</LinearLayout>